宗门初始化